flux/apps/observability/grafana/route/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
spec:
  hostnames:
    - grafana.${NETWORK}-${PROVIDER}.cloudless.dev
  parentRefs:
    - name: eg-gw
      namespace: ingress
      sectionName: https
  rules:
    - backendRefs:
        - name: grafana-service
          namespace: observability
          port: 3000
      matches:
        - path:
            type: PathPrefix
            value: /
